tests/miniJava/neg/006708_mutation.MiniJava
class java { public static void String ( String [ ] java ) { { } } }
